# finqa-agent

./: .gitignore  README.md  pyproject.toml
config/: agent.yaml  llm.yaml  prompts.yaml
data/: convfinqa_dataset.json
src/: cli.py  data.py  demo.py
src/agent/: __init__.py  agent.py  nodes.py  settings.py  state.py  tools.py
src/experiments/: __init__.py  evaluation.py  evaluation_config.py
src/experiments/agent_candidates/: __init__.py  baseline_agent.py  reflection_agent.py  reflection_agent_with_tool.py
tests/: test_config.py  test_data.py  test_llm.py  test_tools.py
